// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountImagesViewListItem Component should render a component 1`] = `
<div
  class="list-group-item"
>
  <div
    class="list-group-item-header"
  >
    <div
      class="list-view-pf-expand"
    >
      <span
        class="fa fa-angle-right"
      />
    </div>
    <div
      class="list-view-pf-main-info"
    >
      <div
        class="list-view-pf-left"
      >
        <span
          aria-hidden="true"
          class="fa fa-unknown list-view-pf-icon-sm"
        />
      </div>
      <div
        class="list-view-pf-body"
      >
        <div
          class="list-view-pf-description"
        >
          <div
            class="list-group-item-text"
          >
            <div
              class="list-group-item-heading"
            >
              ami-rhel7
            </div>
          </div>
        </div>
        <div
          class="list-view-pf-additional-info"
        >
          <div
            class="list-view-pf-additional-info-item"
          >
            <span
              aria-hidden="true"
              class="pficon pficon-screen cloudmeter-listview-infoitem"
            />
            <strong>
              2
            </strong>
            Instances
          </div>
          <div
            class="list-view-pf-additional-info-item cloudmeter-listview-infoitem"
          >
            <span>
              <span
                aria-hidden="true"
                class="fa fa-clock-o"
              />
              <strong>
                25
              </strong>
               Hours
            </span>
          </div>
          <div
            class="list-view-pf-additional-info-item cloudmeter-listview-label"
          >
            <span
              class="label label-warning"
            >
              <abbr
                title="Red Hat Enterprise Linux"
              >
                RHEL
              </abbr>
            </span>
             
          </div>
          <div
            class="list-view-pf-additional-info-item cloudmeter-listview-label"
          >
            <span
              class="label label-default"
            >
              <abbr
                title="Red Hat OpenShift Container Platform"
              >
                RHOCP
              </abbr>
            </span>
             
            <span
              aria-hidden="true"
              class="fa fa-asterisk cloudmeter-pficon-error"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="list-group-item-container container-fluid hidden"
  >
    <div
      class="close"
    >
      <span
        class="pficon pficon-close"
      />
    </div>
  </div>
</div>
`;

exports[`AccountImagesViewListItem Component should wrap long names with a on hover title 1`] = `
<div
  class="list-group-item"
>
  <div
    class="list-group-item-header"
  >
    <div
      class="list-view-pf-expand"
    >
      <span
        class="fa fa-angle-right"
      />
    </div>
    <div
      class="list-view-pf-main-info"
    >
      <div
        class="list-view-pf-left"
      >
        <span
          aria-hidden="true"
          class="fa fa-unknown list-view-pf-icon-sm"
        />
      </div>
      <div
        class="list-view-pf-body"
      >
        <div
          class="list-view-pf-description"
        >
          <div
            class="list-group-item-text"
          >
            <div
              class="list-group-item-heading"
            >
              <span
                title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sed sodales eros."
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sed sodales eros.
              </span>
            </div>
          </div>
        </div>
        <div
          class="list-view-pf-additional-info"
        >
          <div
            class="list-view-pf-additional-info-item"
          >
            <span
              aria-hidden="true"
              class="pficon pficon-screen cloudmeter-listview-infoitem"
            />
            <strong>
              -
            </strong>
            Instances
          </div>
          <div
            class="list-view-pf-additional-info-item cloudmeter-listview-infoitem"
          >
            <span
              aria-hidden="true"
              class="fa fa-clock-o"
            />
            <strong>
              -
            </strong>
             Hours
          </div>
          <div
            class="list-view-pf-additional-info-item cloudmeter-listview-label cloudmeter-listview-label-hidden"
          >
            <span
              class="label label-warning"
            >
              <abbr
                title="Red Hat Enterprise Linux"
              >
                RHEL
              </abbr>
            </span>
             
          </div>
          <div
            class="list-view-pf-additional-info-item cloudmeter-listview-label cloudmeter-listview-label-hidden"
          >
            <span
              class="label label-primary"
            >
              <abbr
                title="Red Hat OpenShift Container Platform"
              >
                RHOCP
              </abbr>
            </span>
             
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="list-group-item-container container-fluid hidden"
  >
    <div
      class="close"
    >
      <span
        class="pficon pficon-close"
      />
    </div>
  </div>
</div>
`;
